# microservice_rust

./: .gitignore  README.md
auth/application/: main.go
auth/controller/: UserController.go
auth/db/: db.go
auth/domain/: user.go
auth/model/: LoginRequest.go
auth/repository/: UserRepository.go  UserRepositoryImpl.go
auth/service/: UserService.go
auth/web/: server.go
task_management/: .env  Cargo.toml
task_management/migrations/2020-01-15-121018_create_task_models_table/: down.sql  up.sql
task_management/src/: lib.rs  main.rs
task_management/src/controller/: mod.rs
task_management/src/domain/: mod.rs
task_management/src/dto/: mod.rs
task_management/src/repository/: mod.rs
task_management/src/schema/: mod.rs
task_management/src/service/: mod.rs
user_management/: .env  Cargo.toml
user_management/src/: main.rs  models.rs  user.rs  user_controller.rs  user_repository.rs  user_service.rs
user_management/src/controller/: mod.rs
user_management/src/dto/: mod.rs
user_management/src/repository/: mod.rs
user_management/src/schema/: mod.rs
user_management/src/service/: mod.rs
